[gd_scene load_steps=46 format=3 uid="uid://djgyvbm6dglio"]

[ext_resource type="Script" path="res://praca.gd" id="1_cpsnw"]
[ext_resource type="Texture2D" uid="uid://ctvqmhrg5xkhe" path="res://img/cenario/praca/sr-do-pedalinho.png" id="1_r65fp"]
[ext_resource type="Texture2D" uid="uid://bg3a5uh20xkel" path="res://img/cenario/praca/sr-dos-baloes.png" id="1_xf8u4"]
[ext_resource type="Texture2D" uid="uid://b4li8r406lep0" path="res://img/cenario/praca/capys.png" id="2_75ejj"]
[ext_resource type="Texture2D" uid="uid://bci31ox8i5we3" path="res://img/cenario/praca/chao-cena1A.png" id="3_10ar6"]
[ext_resource type="Texture2D" uid="uid://sta22gge1kus" path="res://img/cenario/praca/praca-cena3A.png" id="4_qxetg"]
[ext_resource type="PackedScene" uid="uid://b56pfrbvd7r3d" path="res://dialogue.tscn" id="5_45i88"]
[ext_resource type="Texture2D" uid="uid://pgat8brosock" path="res://img/cenario/praca/sapo.png" id="5_en60o"]
[ext_resource type="Texture2D" uid="uid://4dbwhrjlc3m6" path="res://img/cenario/praca/porta.png" id="6_vcmb7"]
[ext_resource type="Texture2D" uid="uid://d38segdx1vmpr" path="res://img/cenario/praca/retorno.png" id="7_6jmfg"]
[ext_resource type="Texture2D" uid="uid://nodn63553np5" path="res://img/cenario/praca/balao1.png" id="11_5qtc8"]
[ext_resource type="Texture2D" uid="uid://car1qj4od21ho" path="res://img/cenario/praca/balao1-pressed.png" id="12_72rim"]
[ext_resource type="Texture2D" uid="uid://8lk0wfan3t4u" path="res://img/cenario/praca/balao2.png" id="13_ff8ba"]
[ext_resource type="Texture2D" uid="uid://dws8qw2yrexb6" path="res://img/cenario/praca/balao2-pressed.png" id="14_lwes5"]
[ext_resource type="Texture2D" uid="uid://df6c73m630yov" path="res://img/cenario/praca/balao3.png" id="15_24yf3"]
[ext_resource type="Texture2D" uid="uid://d0fh2vjrxywua" path="res://img/cenario/praca/balao3-pressed.png" id="16_o0toj"]
[ext_resource type="PackedScene" uid="uid://46blvwif58os" path="res://inventory.tscn" id="17_hsapi"]
[ext_resource type="AudioStream" uid="uid://c2jrm4sqeuryy" path="res://sounds/bexiga estourando.wav" id="18_a7s6e"]
[ext_resource type="Texture2D" uid="uid://da8pldvlb036g" path="res://img/cenario/praca/saida.png" id="19_c8pwd"]
[ext_resource type="AudioStream" uid="uid://tcsnjxxibcvq" path="res://sounds/pedalinho andando completo.wav" id="20_leak2"]
[ext_resource type="AudioStream" uid="uid://cjhxrg03d8c48" path="res://sounds/sapo freesound.mp3" id="21_hbmqr"]
[ext_resource type="AudioStream" uid="uid://x8ex3h5p1h1g" path="res://sounds/mixkit-fairy-arcade-sparkle-866.wav" id="22_ei27n"]
[ext_resource type="Texture2D" uid="uid://bxehu2h7r1cw3" path="res://img/cenario/sebo/apontando-para-a-direita.png" id="23_rkt2o"]
[ext_resource type="Texture2D" uid="uid://cneheufq4tik6" path="res://img/cenario/sebo/effect.png" id="24_fw4qq"]
[ext_resource type="Texture2D" uid="uid://bk6743pbp6bnk" path="res://img/cenario/sebo/espumante.png" id="25_8qb4c"]
[ext_resource type="Texture2D" uid="uid://dndlm07a5a44k" path="res://img/cenario/praca/water.png" id="26_1fhpg"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_k3sx2"]
radius = 50.9253
height = 346.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rkh22"]
size = Vector2(1304, 292)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_qb82f"]
radius = 28.0
height = 280.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_myhba"]
radius = 35.0
height = 262.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_3ebhi"]
radius = 25.5164
height = 236.091

[sub_resource type="RectangleShape2D" id="RectangleShape2D_t4op8"]
size = Vector2(1301, 543)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_2ock3"]
radius = 140.0
height = 410.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_aydxi"]
radius = 68.0
height = 178.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_gcd27"]
radius = 99.0741
height = 908.051

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uytvl"]
size = Vector2(1291, 263)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_miv8g"]
size = Vector2(1270, 516)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_upnfn"]
radius = 91.0
height = 314.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_fpmm5"]
radius = 40.0
height = 226.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_24lke"]
radius = 177.334
height = 619.527

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fq18i"]
size = Vector2(1280.5, 114)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cx86i"]
size = Vector2(172, 381)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_igcx2"]
size = Vector2(1251, 125.5)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_v8nws"]
radius = 37.0
height = 610.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_rnh0f"]
radius = 40.0
height = 580.0

[node name="Praca" type="Node2D"]
script = ExtResource("1_cpsnw")

[node name="Capivaras" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Capivaras"]
position = Vector2(979, 394)
rotation = 1.58476
shape = SubResource("CapsuleShape2D_k3sx2")

[node name="TextureRect" type="TextureRect" parent="Capivaras"]
offset_left = 782.0
offset_top = 208.0
offset_right = 1178.15
offset_bottom = 471.0
texture = ExtResource("2_75ejj")
expand_mode = 3

[node name="Chao" type="TextureRect" parent="."]
visible = false
z_index = -1000
y_sort_enabled = true
offset_top = -2.0
offset_right = 1280.0
offset_bottom = 718.0
texture = ExtResource("3_10ar6")

[node name="Background" type="TextureRect" parent="."]
z_index = -500
offset_left = 2.0
offset_right = 1282.0
offset_bottom = 720.0
mouse_filter = 2
texture = ExtResource("4_qxetg")

[node name="Inventory" parent="." instance=ExtResource("17_hsapi")]

[node name="Dialogue" parent="." instance=ExtResource("5_45i88")]

[node name="Obstaculo" type="StaticBody2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Obstaculo"]
position = Vector2(642, 136)
shape = SubResource("RectangleShape2D_rkh22")

[node name="Arvore1" type="StaticBody2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Arvore1"]
position = Vector2(422, 395)
shape = SubResource("CapsuleShape2D_qb82f")

[node name="Arvore2" type="StaticBody2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Arvore2"]
position = Vector2(135, 390)
shape = SubResource("CapsuleShape2D_myhba")

[node name="Arvore3" type="StaticBody2D" parent="."]
visible = false
rotation = -0.226893

[node name="CollisionShape2D" type="CollisionShape2D" parent="Arvore3"]
position = Vector2(164.631, 438.267)
rotation = -0.226893
shape = SubResource("CapsuleShape2D_3ebhi")

[node name="Obstaculo2" type="StaticBody2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Obstaculo2"]
position = Vector2(640.5, 261.5)
shape = SubResource("RectangleShape2D_t4op8")

[node name="SrBaloes" type="Area2D" parent="."]
visible = false
z_index = -3
position = Vector2(700, 30)

[node name="CollisionShape2D" type="CollisionShape2D" parent="SrBaloes"]
position = Vector2(136, 420)
shape = SubResource("CapsuleShape2D_2ock3")

[node name="StaticBody2D" type="StaticBody2D" parent="SrBaloes"]
position = Vector2(219, 487)

[node name="CollisionShape2D" type="CollisionShape2D" parent="SrBaloes/StaticBody2D"]
position = Vector2(-35, -78)
shape = SubResource("CapsuleShape2D_aydxi")

[node name="TextureRect" type="TextureRect" parent="SrBaloes"]
z_index = 2
offset_left = 75.0
offset_top = 214.0
offset_right = 326.0
offset_bottom = 586.0
texture = ExtResource("1_xf8u4")

[node name="Obstaculo31" type="StaticBody2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Obstaculo31"]
position = Vector2(857, 344)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_gcd27")

[node name="Obstaculo3" type="StaticBody2D" parent="."]
visible = false
position = Vector2(0, -1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Obstaculo3"]
position = Vector2(635.5, 121.5)
shape = SubResource("RectangleShape2D_uytvl")

[node name="Obstaculo4" type="StaticBody2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Obstaculo4"]
position = Vector2(645, 248)
shape = SubResource("RectangleShape2D_miv8g")

[node name="SrPedalinho" type="Area2D" parent="."]
visible = false
position = Vector2(-50, -10)

[node name="CollisionShape2D" type="CollisionShape2D" parent="SrPedalinho"]
position = Vector2(1051, 456)
shape = SubResource("CapsuleShape2D_upnfn")

[node name="TextureRect" type="TextureRect" parent="SrPedalinho"]
z_index = -2
offset_left = 895.0
offset_top = 175.0
offset_right = 1198.0
offset_bottom = 617.0
mouse_default_cursor_shape = 16
texture = ExtResource("1_r65fp")

[node name="StaticBody2D" type="StaticBody2D" parent="SrPedalinho"]
z_index = 1
position = Vector2(1086, 485)

[node name="CollisionShape2D" type="CollisionShape2D" parent="SrPedalinho/StaticBody2D"]
z_index = 2
position = Vector2(-44, -98)
shape = SubResource("CapsuleShape2D_fpmm5")

[node name="Balao1" type="TouchScreenButton" parent="."]
visible = false
z_index = 10
position = Vector2(234, 32)
texture_normal = ExtResource("11_5qtc8")
texture_pressed = ExtResource("12_72rim")

[node name="Balao2" type="TouchScreenButton" parent="."]
visible = false
z_index = 100
position = Vector2(514, 31)
texture_normal = ExtResource("13_ff8ba")
texture_pressed = ExtResource("14_lwes5")

[node name="Balao3" type="TouchScreenButton" parent="."]
visible = false
z_index = 100
position = Vector2(768, 31)
texture_normal = ExtResource("15_24yf3")
texture_pressed = ExtResource("16_o0toj")

[node name="Sapo" type="Area2D" parent="."]
z_index = -10

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sapo"]
position = Vector2(689, 403)
rotation = 1.53764
shape = SubResource("CapsuleShape2D_24lke")

[node name="TextureRect" type="TextureRect" parent="Sapo"]
offset_left = 630.0
offset_top = 101.0
offset_right = 877.0
offset_bottom = 345.0
texture = ExtResource("5_en60o")
expand_mode = 5

[node name="Obstaculo5" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Obstaculo5"]
position = Vector2(644.75, 660)
shape = SubResource("RectangleShape2D_fq18i")

[node name="Saida" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Saida"]
position = Vector2(1106, 525.5)
shape = SubResource("RectangleShape2D_cx86i")

[node name="TextureRect" type="TextureRect" parent="Saida"]
offset_left = 1010.0
offset_top = 334.0
offset_right = 1205.0
offset_bottom = 695.0
texture = ExtResource("19_c8pwd")

[node name="Obstaculo6" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Obstaculo6"]
position = Vector2(647.5, 660.25)
shape = SubResource("RectangleShape2D_igcx2")

[node name="Retorno" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Retorno"]
position = Vector2(44, 415)
shape = SubResource("CapsuleShape2D_v8nws")

[node name="TextureButton" type="TouchScreenButton" parent="Retorno"]
z_index = -2
position = Vector2(-37, 307)
texture_normal = ExtResource("7_6jmfg")

[node name="Porta" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Porta"]
position = Vector2(1242, 429)
shape = SubResource("CapsuleShape2D_rnh0f")

[node name="TextureButton" type="TouchScreenButton" parent="Porta"]
z_index = -2
position = Vector2(1121, 294)
texture_normal = ExtResource("6_vcmb7")

[node name="BalaoSound" type="AudioStreamPlayer2D" parent="."]
visible = false
stream = ExtResource("18_a7s6e")

[node name="PedalinhoSound" type="AudioStreamPlayer2D" parent="."]
visible = false
stream = ExtResource("20_leak2")

[node name="SapoSound" type="AudioStreamPlayer2D" parent="."]
visible = false
stream = ExtResource("21_hbmqr")

[node name="ColetaSound" type="AudioStreamPlayer2D" parent="."]
visible = false
stream = ExtResource("22_ei27n")

[node name="DicaPorta" type="TextureRect" parent="."]
visible = false
offset_left = 1072.0
offset_top = 350.0
offset_right = 1200.0
offset_bottom = 478.0
texture = ExtResource("23_rkt2o")

[node name="DicaRetorno" type="TextureRect" parent="."]
visible = false
offset_left = 78.0
offset_top = 362.0
offset_right = 206.0
offset_bottom = 490.0
texture = ExtResource("23_rkt2o")
flip_h = true

[node name="DicaSrBaloes" type="TextureRect" parent="."]
visible = false
offset_left = 654.0
offset_top = 456.0
offset_right = 782.0
offset_bottom = 584.0
rotation = -1.01055
texture = ExtResource("24_fw4qq")
flip_h = true

[node name="DicaSrPedalinho" type="TextureRect" parent="."]
visible = false
offset_left = 854.0
offset_top = 362.0
offset_right = 982.0
offset_bottom = 490.0
texture = ExtResource("25_8qb4c")

[node name="DicaSapo" type="TextureRect" parent="."]
offset_left = 628.0
offset_top = 393.0
offset_right = 756.0
offset_bottom = 521.0
texture = ExtResource("26_1fhpg")

[node name="Timer" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="Capivaras" to="." method="_on_capivaras_body_entered"]
[connection signal="player_go_to" from="Dialogue" to="." method="_on_dialogue_player_go_to"]
[connection signal="pressed_no" from="Dialogue" to="." method="_on_dialogue_pressed_no"]
[connection signal="pressed_yes" from="Dialogue" to="." method="_on_dialogue_pressed_yes"]
[connection signal="body_entered" from="SrBaloes" to="." method="_on_sr_baloes_body_entered"]
[connection signal="body_entered" from="SrPedalinho" to="." method="_on_sr_pedalinho_body_entered"]
[connection signal="focus_entered" from="SrPedalinho/TextureRect" to="." method="_on_sr_pedalinho_focus_entered"]
[connection signal="pressed" from="Balao1" to="." method="_on_balao_1_pressed"]
[connection signal="pressed" from="Balao2" to="." method="_on_balao_2_pressed"]
[connection signal="pressed" from="Balao3" to="." method="_on_balao_3_pressed"]
[connection signal="body_entered" from="Sapo" to="." method="_on_sapo_body_entered"]
[connection signal="body_entered" from="Saida" to="." method="_on_saida_body_entered"]
[connection signal="body_entered" from="Retorno" to="." method="_on_retorno_body_entered"]
[connection signal="body_exited" from="Retorno" to="." method="_on_retorno_body_exited"]
[connection signal="pressed" from="Retorno/TextureButton" to="." method="_on_retorno_pressed"]
[connection signal="body_entered" from="Porta" to="." method="_on_porta_body_entered"]
[connection signal="body_exited" from="Porta" to="." method="_on_porta_body_exited"]
[connection signal="pressed" from="Porta/TextureButton" to="." method="_on_porta_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
